add jvmoptions doc